--- a/emscripten/repl.html
+++ b/emscripten/repl.html
@@ -5,43 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Lx repl</title>
     <style>
-      .emscripten { padding-right: 0; margin-left: auto; margin-right: auto; display: block; }
-      textarea.emscripten { font-family: monospace; width: 80%; }
-      div.emscripten { text-align: center; }
-      div.emscripten_border { border: 1px solid black; }
-
-      .spinner {
-        height: 50px;
-        width: 50px;
-        margin: 0px auto;
-        -webkit-animation: rotation .8s linear infinite;
-        -moz-animation: rotation .8s linear infinite;
-        -o-animation: rotation .8s linear infinite;
-        animation: rotation 0.8s linear infinite;
-        border-left: 10px solid rgb(0,150,240);
-        border-right: 10px solid rgb(0,150,240);
-        border-bottom: 10px solid rgb(0,150,240);
-        border-top: 10px solid rgb(100,0,200);
-        border-radius: 100%;
-        background-color: rgb(200,100,250);
-      }
-      @-webkit-keyframes rotation {
-        from {-webkit-transform: rotate(0deg);}
-        to {-webkit-transform: rotate(360deg);}
-      }
-      @-moz-keyframes rotation {
-        from {-moz-transform: rotate(0deg);}
-        to {-moz-transform: rotate(360deg);}
-      }
-      @-o-keyframes rotation {
-        from {-o-transform: rotate(0deg);}
-        to {-o-transform: rotate(360deg);}
-      }
-      @keyframes rotation {
-        from {transform: rotate(0deg);}
-        to {transform: rotate(360deg);}
-      }
-
+      textarea { font-family: monospace; width: 80%; }
     </style>
   </head>
   <body>
@@ -52,7 +16,7 @@
     </div>
     
     <hr/>
-    <textarea class="emscripten" id="output" rows="8"></textarea>
+    <textarea id="output" rows="8"></textarea>
     <hr>
     <script type="module">
       var statusElement = document.getElementById('status');
@@ -135,18 +99,7 @@
 
       import createLxModule from './lx.js'
       const lx = await createLxModule(Module)
-      function startRepl() {
-        const args = ['lx', 'repl']
-        let ptrArr = lx.stackAlloc(args.length * 4)
-        for (let i = 0; i < args.length; i++) {
-          let len = args[i].length + 1
-          let ptr = lx.stackAlloc(len)
-          lx.stringToUTF8(args[i], ptr, len)
-          lx.setValue(ptrArr + i * 4, ptr, 'i32')
-        }
-        lx._main(args.length, ptrArr)
-      }
-      startRepl()
+      lx._runRepl()
     </script>
   </body>
 </html>
